replace list.of