@@ -1,13 +1,12 @@
 package uk.gov.companieshouse.mapper;
 
 import org.springframework.stereotype.Component;
-import uk.gov.companieshouse.database.entity.DocumentDetailsEntity;
 import uk.gov.companieshouse.database.entity.SuppressionEntity;
 import uk.gov.companieshouse.mapper.base.Mapper;
 import uk.gov.companieshouse.model.Suppression;
 
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
 
 @Component
 public class SuppressionMapper implements Mapper<SuppressionEntity, Suppression> {
@@ -39,7 +38,7 @@ public class SuppressionMapper implements Mapper<SuppressionEntity, Suppression>
             applicantDetailsMapper.map(value.getApplicantDetails()),
             addressMapper.map(value.getAddressToRemove()),
             addressMapper.map(value.getServiceAddress()),
-            new ArrayList<>(List.of(
+            new ArrayList<>(Arrays.asList(
                 documentDetailsMapper.map(value.getDocumentDetails())
             )),
             addressMapper.map(value.getContactAddress()),
