@@ -8,6 +8,7 @@ import uk.gov.companieshouse.database.entity.PaymentDetailsEntity;
 import uk.gov.companieshouse.database.entity.SuppressionEntity;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class SuppressionEntityFixtures {
@@ -38,7 +39,7 @@ public class SuppressionEntityFixtures {
                 TestData.Suppression.Address.postcode,
                 TestData.Suppression.Address.country
             ),
-            new ArrayList<>(List.of(
+            new ArrayList<>(Arrays.asList(
                 new DocumentDetailsEntity(
                     TestData.Suppression.DocumentDetails.companyName,
                     TestData.Suppression.DocumentDetails.companyNumber,
